tests/ui/statics/extern-static-in-static-ice-143174.stderr
error[E0080]: cannot access extern static `BAR`
  --> $DIR/extern-static-in-static-ice-143174.rs:9:25
   |
LL | static FOO: &Foo = &Foo(BAR);
   |                         ^^^ evaluation of `FOO` failed here

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/extern-static-in-static-ice-143174.rs:9:25
   |
LL | static FOO: &Foo = &Foo(BAR);
   |                         ^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0133.
For more information about an error, try `rustc --explain E0080`.
